2013-01-18  Per Bothner  <per@bothner.com>

	* ReaderDispatchMisc.java (read): Move handling of #|...|# comments to
	(readNestedComment): ... new method..

	* ReadTable.java (unquoteEntry): Inline field where used ...
	(initialize): ... here.
	(makeSymbol): Make non-static and protected.

2013-01-13  Per Bothner  <per@bothner.com>

	* ReaderVector.java (readVector): On EOF, use vector's start
	position for error message.

2013-01-05  Per Bothner  <per@bothner.com>

	* LispLanguage.java (quote_sym, unquote_sym, unquotesplicing_sym)
	quasiquote_sym): Rename static fields to quote_str, unquote_str,
	unquotesplicing_str, and quasiquote_str.

2012-12-27  Per Bothner  <per@bothner.com>

	* DefineNamespace.java (scanForDefinitions): Also use prefix when
	creating Namespace object.

2012-12-26  Per Bothner  <per@bothner.com>

	* LispReader.java (readValuesAndAppend): New method.
	* ReaderVector.java (readVector): Use readValuesAndAppend.

2012-12-19  Charles Turner  <chturne@gmail.com>

	* LispLanguage.java (unitNamespace): Moved here from Scheme class.

2012-11-11  Per Bothner  <per@bothner.com>

	* LangObjType.java (compare): Add test for nullType.

2012-10-21  Per Bothner  <per@bothner.com>

	* ReaderXmlElement.java: Change reading of XML literals so it returns
	"call" of a symbol like $xml-element$, and not a literal Procedure.
	This enables better quotation behavior and read/write round-tripping.
	Also some other improvememts like using a symbol in place of a string.
	Also, pass String to MakeElement instead of wrapping in MakeText.
	* ResolveNamespace.java: Update to match ReaderXmlElement changes.
	* MakeXmlElement.java: Update to call MakeElement#setStringIsText.

2012-10-21  Per Bothner  <per@bothner.com>

	* ReadTable.java (makeSymbol): Simplify.

2012-10-20  Charles Turner <chturne@gmail.com>
	    Per Bothner  <per@bothner.com>

	Re-factor type lookup to avoid Scheme dependencies.
	* LispLanguage.java (getTypeMap, getPackageStyleType,